overflow fix

--- a/css/creative.css
+++ b/css/creative.css
@@ -3,11 +3,11 @@ html {
   width: 100%;
   height: 100%;
   font-family: "Roboto", sans-serif;
-  overflow-x: hidden;
 }
 
 body {
   font-family: 'Roboto', sans-serif;
+  overflow-x: hidden;
 }
 
 hr {
@@ -146,7 +146,6 @@ img::-moz-selection {
 .pretty-grid {
   display: flex;
   align-items: center;
-  width: 50% !important;
 }
 
 .pretty-img {
@@ -161,6 +160,10 @@ img::-moz-selection {
   .pretty-img {
     height: 100px;
   }
+}
+
+.centered-row {
+  justify-content: center;
 }
 
 #mainNav {
